Fix Projects slider overflow

--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -11,6 +11,9 @@
 	}
 
 	&-slider {
+		padding: 0 !important;
+		display: flex;
+
 		.postfix span {
 			padding: 0 0.25em;
 		}
